--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -28,8 +28,7 @@ library(reprtree)  # Try devtools::install_github('araastat/reprtree')
 ## STATIONS/TSS - *FROM WATER CHEMISTRY BENCHMARKS SCRIPT*
 
 ```{r}
-#tss <- read_excel("TSS_2025-11-06.xlsx") #output file from ref benchmarks script - no Ambient sites
-tss <- read_excel("TSS_2025-11-12amb.xlsx") #output file from ref benchmarks script - Ambient sites included
+tss <- read_excel("TSS_amb_2025-11-12.xlsx") #output file from ref benchmarks script - Ambient sites included
 
 #tss <- tss %>% filter(TSS < 20) #testing model output by excluding values >20 mg/L
 
@@ -540,13 +539,6 @@ plot(rf.full, log="x")  # 500 seems to work fine.
 # print(rf1)
 # plot(rf1,log="x",main="node depth")
 
-# #limiting tree depth
-# for (i in seq(1, 25, 1)) {
-# rf2 = randomForest(TSS ~ ., tss.cal, maxnodes=i, ntree=500)
-# print(rf2)
-# points(rf2$mse,col="darkgreen",type="l")
-# print(rf2$mse)
-# }
 
 # One way to find best mtry based on tuneRF.
 # rf2 <- randomForest(TSS ~ ., tss.cal, ntree=500, importance = TRUE)
@@ -574,6 +566,16 @@ plot(rf.full, log="x")  # 500 seems to work fine.
 # ggplot(df,aes(x=mtry,y=RMSE))+
 # stat_summary(fun.data=mean_se,geom="errorbar",width=0.2) +
 # stat_summary(fun=mean,geom="line")
+x <- tss.cal[ , c(1:4, 6:83)]
+
+# another try in class
+control <- trainControl(method="repeatedcv", number=10,repeats = 3, search="random")
+set.seed(1)
+mtry <- sqrt(ncol(x))
+rf_random <- train(log(TSS + 1)~., data = tss.cal, method = "rf", metric = "RMSE", tuneLength = 15, trControl=control)
+print(rf_random)
+plot(rf_random)
+
 ```
 
 
